--- a/src/app/components/joke/joke.component.html
+++ b/src/app/components/joke/joke.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
   <div class="col-sm-12 col-md-8 col-lg-6 text-center" style="min-height: 150px">
     <div class="alert alert-info align-middle" role="alert" *ngIf="joke">
-      {{joke}}
+      {{ joke | quotationMark}}
     </div>
     <button class="btn btn-primary align-bottom" (click)="showJoke()">
       Gib mir einen Chuck-Norris-Witz!
